# jadwalsmaboy

./: .env.example  .flaskenv  .gitignore  404.html  Gemfile  README.md  _config.yml  doa.html  donasi.html  guru.html  index.html  lokasi_guru.html  parse.py  passenger_wsgi.py  pyproject.toml  requirements.txt  style.css  ujian.html
.github/workflows/: jekyll.yml
_includes/: navbar.html
_includes/forms/: guru.html  jadwal.html  ujian.html
_layouts/: base.html
assets/css/: style.scss
data/: pengumuman.json
data/guru/: all.json
data/kelas/: X-1.json  X-10.json  X-11.json  X-12.json  X-2.json  X-3.json  X-4.json  X-5.json  X-6.json  X-7.json  X-8.json  X-9.json  XI-1.json  XI-10.json  XI-11.json  XI-12.json  XI-2.json  XI-3.json  XI-4.json  XI-5.json  XI-6.json  XI-7.json  XI-8.json  XI-9.json  XII-1.json  XII-10.json  XII-11.json  (+13 more)
docs/: CNAME  doa.html  donasi.html  guru.html  index.html  lokasi_guru.html  style.css  ujian.html
guru/: all.json
kelas/: X-2.json  X-9.json  XI-4.json  XI-5.json  XII-7.json
lokasi_guru/: 11.json  12.json  14.json  18.json  19.json  23.json  24.json  29.json  30.json  34.json  37.json  41.json  42.json  45.json  49.json  5.json  52.json  53.json  55.json  56.json  58.json  60.json  61.json  63.json  65.json  66.json  69.json  75.json  76.json  77.json  79.json  8.json
parsedata/: __main__.py  helpers.py  helpers_oldformat.py  parse.py  parse_oldformat.py
sendwa/: __init__.py  __main__.py  config.py  database.py  retrieve.py  routes.py  utils.py  whatsapp.py
ujian/: X.json  XI-11 – XI-12.json  XII-1 – XII-8.json
(+192 files in other folders)
